# tekton

./: .gitignore  Cargo.toml  justfile
docs/design/: tekton-tool.md
experimental/: Cargo.toml
experimental/examples/: agent_factory.rs
experimental/pkl/: AgentConfig.pkl  Config.pkl  providerSchema.pkl  providers.pkl
experimental/pkl/examples/: coder.pkl  example.pkl
experimental/pkl/models_dev/: PklProject.deps.json  ProviderSchema.pkl  ProvidersBase.pkl  generate-providers.pkl  generate_providers.pkl  generate_providers.py  models_dev_providers.pkl  providers.pkl  providers_base.pkl  providers_models_dev.pkl
experimental/pkl/schema/: Agent.pkl  Config.pkl  Model.pkl  Provider.pkl
experimental/src/: config.rs  environment.rs  error.rs  factory.rs  handle.rs  lib.rs
experimental/tests/: config_tests.rs  factory_tests.rs  integration_tests.rs  vidaimock_tests.rs
experimental/tests/common/: mod.rs
experimental/tests/testdata/: config.pkl  providers.pkl
experimental/tests/testdata/config/providers/: openai_tool_call.yaml
experimental/tests/testdata/config/templates/: terminal_tool_call.json.j2
experimental/tests/testdata/models_dev/: providersModelsDev.pkl
experimental/tests/testdata/workspaces/custom-provider/: tekton.pkl
experimental/tests/testdata/workspaces/gemini/: tekton.pkl
experimental/tests/testdata/workspaces/mock-server/: tekton.pkl
experimental/tests/testdata/workspaces/multiple-agents/: tekton.pkl
experimental/tests/testdata/workspaces/unknown-model/: tekton.pkl
terminal-tool/: Cargo.toml
terminal-tool/src/: lib.rs  session.rs
type-tool/: Cargo.toml
type-tool/src/: lib.rs  session.rs
unstable/: Cargo.toml
unstable/examples/: agent_factory.rs
unstable/pkl/: config.pkl
unstable/pkl/models_dev/: PklProject  generate-providers.pkl
unstable/src/: config.rs  error.rs
unstable/tests/: config_tests.rs  integration_tests.rs
unstable/tests/common/: mod.rs
unstable/tests/testdata/: config.pkl
unstable/tests/testdata/workspaces/anthropic/: tekton.pkl
unstable/tests/testdata/workspaces/credentials/: tekton.pkl
unstable/tests/testdata/workspaces/custom-provider/: tekton.pkl
unstable/tests/testdata/workspaces/example/: tekton.pkl
unstable/tests/testdata/workspaces/invalid-default-agent/: tekton.pkl
unstable/tests/testdata/workspaces/missing-provider/: tekton.pkl
unstable/tests/testdata/workspaces/mock-tool-call/: tekton.pkl
unstable/tests/testdata/workspaces/openai/: tekton.pkl
unstable/tests/testdata/workspaces/openai-compatible/: tekton.pkl
