[workspace]
resolver = "3"
members = [
    "terminal-tool",
    "experimental",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Nilton Volpato <nilton@volpa.to>"]
# license = ? # TODO pick a license.
repository = "https://github.com/NiltonVolpato/tekton"
readme = "README.md"

[workspace.dependencies]
tracing = { version = "0.1", default-features = false, features = ["release_max_level_warn"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Transitive dependency version duplication — not actionable
multiple_crate_versions = "allow"

# License is TBD
cargo_common_metadata = "allow"
# Two-lambda form is no better than if-let
option_if_let_else = "allow"
# pub(crate) is intentional visibility documentation even in private modules
redundant_pub_crate = "allow"
# Method references can be less readable when the type isn't spelled out nearby
redundant_closure_for_method_calls = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
