[workspace]
resolver = "3"
members = [
    "terminal-tool",
    "unstable",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Nilton Volpato <nilton@volpa.to>"]
# license = ? # TODO pick a license.
repository = "https://github.com/NiltonVolpato/tekton"
readme = "README.md"

[workspace.dependencies]
tracing = { version = "0.1", default-features = false, features = ["release_max_level_debug"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Enable some lints from the "restriction" group.
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
error_impl_error = "warn"
exit = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
infinite_loop = "warn"
missing_asserts_for_indexing = "warn"
redundant_test_prefix = "warn"

# Transitive dependency version duplication — not actionable
multiple_crate_versions = "allow"
# License is TBD
cargo_common_metadata = "allow"
# Two-lambda form is no better than if-let
option_if_let_else = "allow"
# pub(crate) is intentional visibility documentation even in private modules
redundant_pub_crate = "allow"
# Method references can be less readable when the type isn't spelled out nearby
redundant_closure_for_method_calls = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
