[package]
name = "tekton-experimental"
version.workspace = true
edition.workspace = true
authors.workspace = true
# license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
futures = "0.3"
rig-core = "0.31.0"
rpkl = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tekton-terminal-tool = { path = "../terminal-tool" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
