[package]
name = "tekton-experimental"
description = "Experimental agent configurations and factories for Tekton"
version.workspace = true
edition.workspace = true
authors.workspace = true
# license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["agent", "llm", "experimental"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
futures = "0.3"
rig-core = "0.31.0"
rpkl = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tekton-terminal-tool = { path = "../terminal-tool" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
