[package]
name = "tekton-type-tool"
version = "0.0.0"
edition = "2024"

[dev-dependencies]
regex = "1"

[dependencies]
expectrl = "0.8"
rig-core = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
