[package]
name = "tekton-type-tool"
version = "0.0.0"
edition = "2024"

[features]
agent = ["dep:anyhow", "dep:tracing", "dep:tracing-subscriber"]
otel = ["agent", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dev-dependencies]
regex = "1"

[dependencies]
expectrl = "0.8"
libc = "0.2"
rig-core = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Agent binary dependencies (optional)
anyhow = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
opentelemetry = { version = "0.30", optional = true }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.30", optional = true }
tracing-opentelemetry = { version = "0.31", optional = true }

[[bin]]
name = "agent"
required-features = ["agent"]
